using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public enum KyokoStates
{
    Idle,
    Walking,
    Running,
    Jumping,
    Falling,
    Death,
    Diving,
    Kicking,
    HurricaneKicking,
    UltimateDab,
    BackElbow,
    BackKick,
    DropKick,
    DragonFeet,
    Frankensteiner,
    Stomp,
}
